# geneweb-plugin-api

./: .merlin  geneweb_plugin_api.opam
src/: META  api.ml  api_csv.ml  api_csv.mli  api_def.ml  api_graph.ml  api_marshal_dico_place.ml  api_marshal_dico_place.mli  api_piqi_util.ml  api_saisie_autocomplete.ml  api_saisie_read.ml  api_saisie_write.ml  api_search.ml  api_stats.ml  api_update_family.ml  api_update_person.ml  api_update_util.ml  api_util.ml  api_warnings.ml  dune  plugin_api.ml
src/assets/: api.proto  api_saisie_read.proto  api_saisie_write.proto  api_stats.proto
