opam-version: "2.0"
version: "1.0"
maintainer: "geneweb@geneanet.org"
authors: [ "Julien SAGOT" ]
homepage: "https://github.com/geneanet/geneweb-plugin-api"
bug-reports: "https://github.com/geneanet/geneweb-plugin-api/issues"
dev-repo: "git+https://github.com/geneanet/geneweb-plugin-api.git"
build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
